@@ -93,6 +93,18 @@ XML::LibXML = 0
 -description = Support rsync tasks
 Expect = 0
 
+[OptionalFeature / test_file_encoding]
+-phase = develop
+-relationship = suggests
+-description = Test file encoding
+File::LibMagic = 0
+
+[OptionalFeature / test_mysql]
+-phase = develop
+-relationship = suggests
+-description = Test MySQL commands
+Test::mysqld = 0
+
 [Test::MinimumVersion]
 max_target_perl = 5.10.1
 
